<resources>
    <string name="app_name">communitycircuit1</string>
    <string name="communitycircuit">CommunityCircuit</string>
    <string name="uniting_hearts_to_fight_poverty_your_contribution_their_liberation">Uniting Hearts to Fight Poverty: Your Contribution, Their Liberation.</string>
    <string name="your_contribution_their_liberation">Your Contribution, Their Liberation</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="beyond_boundaries_bridging_gaps_breaking_chains_ending_poverty">Beyond Boundaries: Bridging Gaps, Breaking Chains, Ending Poverty.</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="log_in">Log in</string>

    <string name="default_web_client_id" translatable="false">117787780601-42dt2eidd78gagdeel3ahj8mpsmu5e7t.apps.googleusercontent.com</string>

    <string name="by_tapping_continue_iwith_facebook_google_you_agree_to_communitycircuit_s_terms_and_conditions">By tapping Continue with Facebook, Google, you agree to Communitycircuit\'s Terms and conditions</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logoutButton">logoutButton</string>
    <string name="get_started">Get Started</string>
    <string name="are_you_ready_to_be_part_of_our_community">Are you ready to be part of our community?</string>
    <string name="start_building_your_profile_right_away">Start building your profile right away</string>
    <string name="skip">skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_out">Sign Out</string>
    <string name="community_circuit_apps_streamline_crowdfunding_efforts_in_local_areas_offering_a_user_friendly_platform_for_community_members_to_share_and_support_initiatives_these_platforms_foster_collaboration_enabling_residents_to_address_communal_needs_and_drive_positive_transformations_within_their_neighborhoods_through_accessible_interfaces_and_collaborative_features_community_circuit_apps_empower_grassroots_initiatives_facilitating_impactful_change_at_the_local_level">Community Circuit apps streamline crowdfunding efforts in local areas, offering a user-friendly platform for community members to share and support initiatives. These platforms foster collaboration, enabling residents to address communal needs and drive positive transformations within their neighborhoods. Through accessible interfaces and collaborative features, Community Circuit apps empower grassroots initiatives, facilitating impactful change at the local level.</string>
    <string name="account">Account</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="total_campaigns">Total Campaigns</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="get_ready_to_start_your_campaign">Get ready to start your campaign</string>
    <string name="my_campaign_title">my Campaign Title</string>
    <string name="campaign_title">Campaign Title</string>
    <string name="asterisis">*</string>
    <string name="campaign_tagline">Campaign Tagline</string>
    <string name="donate">Donate</string>
    <string name="days_left">days Left</string>
    <string name="follow_to_know_how_community_circuit_delivers_your_donation">Follow to know how community circuit delivers your donation</string>
    <string name="share_a_meal">Share a Meal</string>
    <string name="donate_now">Donate Now</string>
    <string name="feed_a_family_in_need_within_your_community">Feed a family in Need within your community</string>
    <string name="this_the_journey_to_your_donation">This the Journey to your Donation.</string>
    <string name="commcircuit_about_us">Community circuit is more of a an organization that helps in improving the lives of community members. We believe in the concept of brotherhood and being there for each other and we try to improve lives through the public donations. We also do collaborate with other organizations within the community</string>
    <string name="campaign_choose">There is a variety of need to choose from starting from individuals needs that they have posted. To the campaigns that the community circuit have initialized.</string>
    <string name="_2_how_the_donations_are_disparsed">2. How the Donations are Disparsed</string>
    <string name="donations_disparsed">We do have a center in the communities that we have implemented this and it acts as a collection center to the physical donations made. The funds sent are disparsed to the beneficiaries and our staffs ensure that they are used on the right purpose.</string>
    <string name="_1_choose_where_to_help">1. Choose where to help</string>
    <string name="get_to_know_us">Get to know us</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="give_a_meal_to_a_needy_family">Give a meal to a needy family</string>
    <string name="amount">Amount</string>
    <string name="phone_number">Phone Number</string>
    <string name="admin_side">Admin Side</string>
    <string name="textbeneficiary">textBeneficiary</string>
    <string name="event_title">Event Title</string>
    <string name="the_event_title">The event title</string>
    <string name="event_venue">Event Venue</string>
    <string name="event">Event venue</string>
    <string name="upload_a_square_image_to_represent_your_event">Upload a Square Image to represent your event</string>
</resources>