<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/log_in"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_continue_with_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/continue_with_email"
        android:background="@drawable/login_continue_with_email"
        />

    <Button
        android:id="@+id/btn_continue_with_google"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/continue_with_google"
        android:background="@drawable/login_continue_with_email"
        />
    <Button
        android:id="@+id/btn_continue_with_facebook"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/continue_with_facebook"
        android:background="@drawable/login_continue_with_email"
        />



</LinearLayout>