<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity5delivery">

    <!-- Carousel Container -->
    <LinearLayout
        android:id="@+id/carouselContainer"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <!-- ViewPager2 for Images -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <!-- TabLayout for Dots -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_the_journey_to_your_donation"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:textSize="25sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commcircuit_about_us"

        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20sp"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_choose_where_to_help"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="17sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campaign_choose"

        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20sp"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_how_the_donations_are_disparsed"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="17sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations_disparsed"

        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20sp"
        android:textSize="15sp"
        />







</LinearLayout>

</ScrollView>