<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainHome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_ready_to_be_part_of_our_community"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="120dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_building_your_profile_right_away"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        />
    <Button
        android:id="@+id/showQuestionsButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:paddingStart="10dp"
        android:background="@drawable/getstarted"
        android:layout_marginHorizontal="40dp"
        tools:targetApi="p"
        tools:ignore="RtlSymmetry" />
    <Button
        android:id="@+id/skip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:paddingStart="10dp"
        android:background="@drawable/signupbtn"
        android:layout_marginHorizontal="40dp"
        tools:targetApi="p"
        tools:ignore="RtlSymmetry" />


</LinearLayout>