<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_a_meal_to_a_needy_family"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="17sp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/loan"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginBottom="50dp"
       />
    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="300dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:backgroundTint="@color/purple_700"
        android:elevation="8dp"
        />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bg"
        android:layout_marginVertical="5dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:backgroundTint="@color/purple_700"
        android:layout_marginBottom="30dp"
        android:elevation="8dp" />

</LinearLayout>