<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".Settings">

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/account"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="8dp"
        app:drawableLeftCompat="@drawable/baseline_arrow_back_ios_24" />
    <TextView
        android:id="@+id/menu_item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:textColor="@color/black"

        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
        android:padding="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>

    <TextView
        android:id="@+id/menu_item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Account Settings"
        android:textColor="@color/black"

        android:padding="15dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>

    <TextView
        android:id="@+id/menu_item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/black"

        android:padding="15dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>

    <TextView
        android:id="@+id/menu_item4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recently_viewed"
        android:textColor="@color/black"

        android:padding="15dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>

    <TextView
        android:id="@+id/menu_item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:textColor="@color/black"

        android:padding="15dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>

    <TextView
        android:id="@+id/menu_item6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_campaigns"
        android:padding="15dp"
        android:textColor="@color/black"

        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>

    <TextView
        android:id="@+id/menu_item7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Send Feedback"
        android:padding="15dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />

    <TextView
        android:id="@+id/menu_item8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:padding="15dp"
        android:textColor="@color/black"

        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"/>



    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:text="Sign Out"
        android:textColor="@color/black"
        android:background="@drawable/login_continue_with_email"

        android:textStyle="bold"
        />




</LinearLayout>