<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".Event">


            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:drawableLeftCompat="@drawable/baseline_arrow_back_ios_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/editEventTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/the_event_title"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                tools:ignore="RtlSymmetry" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_venue"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="5dp"/>


            <EditText
                android:id="@+id/editEventVenue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/event"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Time"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"/>


            <EditText
                android:id="@+id/editEvenTime"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="Select Time"
                tools:ignore="RtlSymmetry" />




            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Event Card Image "
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="1dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/upload_a_square_image_to_represent_your_event"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <!-- Campaign Card Image -->
            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="36dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/image"
                app:layout_constraintStart_toStartOf="@+id/edtPhone"
                app:layout_constraintTop_toBottomOf="@+id/edtPhone" />
            <Button
                android:id="@+id/buttonChooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_continue_with_email"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:text="Choose Image" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"
                android:background="@drawable/login_continue_with_email"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Submit" />


            <View
                android:id="@+id/overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/overlayColor"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>